buck-out/log/2022-03-06_19h48m15s_buildcommand_b5bd35e6-7424-4c78-9975-cb50b45c120e/simple_console.log
PARSING BUCK FILES: FINISHED IN 1.0s
CREATING ACTION GRAPH: FINISHED IN 0.1s
src/canvas.cpp:10:23: error: cannot define or redeclare 'GetIndex' here because namespace 'cg' does not enclose namespace 'Canvas'
long long int Canvas::GetIndex(const cp_int& x, const cp_int& y)
              ~~~~~~~~^
src/canvas.cpp:12:11: error: use of undeclared identifier '_size_x'
  return (_size_x * y) + x;
          ^
src/canvas.cpp:12:21: error: use of undeclared identifier 'y'
  return (_size_x * y) + x;
                    ^
src/canvas.cpp:12:26: error: use of undeclared identifier 'x'
  return (_size_x * y) + x;
                         ^
src/canvas.cpp:15:9: error: cannot define or redeclare 'Canvas' here because namespace 'cg' does not enclose namespace 'Canvas'
Canvas::Canvas(const cp_int& size_x, const cp_int& size_y) : _size_x(size_x), _size_y(size_y)
~~~~~~~~^
src/canvas.cpp:15:70: error: use of undeclared identifier 'size_x'; did you mean 'sizeof'?
Canvas::Canvas(const cp_int& size_x, const cp_int& size_y) : _size_x(size_x), _size_y(size_y)
                                                                     ^~~~~~
                                                                     sizeof
src/canvas.cpp:15:87: error: use of undeclared identifier 'size_y'; did you mean 'sizeof'?
Canvas::Canvas(const cp_int& size_x, const cp_int& size_y) : _size_x(size_x), _size_y(size_y)
                                                                                      ^~~~~~
                                                                                      sizeof
src/canvas.cpp:17:3: error: use of undeclared identifier '_data'
  _data = new CanvasPixel[size_x * size_y];
  ^
src/canvas.cpp:17:27: error: use of undeclared identifier 'size_x'; did you mean 'sizeof'?
  _data = new CanvasPixel[size_x * size_y];
                          ^~~~~~
                          sizeof
src/canvas.cpp:17:36: error: use of undeclared identifier 'size_y'; did you mean 'sizeof'?
  _data = new CanvasPixel[size_x * size_y];
                                   ^~~~~~
                                   sizeof
src/canvas.cpp:17:42: error: expected expression
  _data = new CanvasPixel[size_x * size_y];
                                         ^
src/canvas.cpp:20:9: error: cannot define or redeclare '~Canvas' here because namespace 'cg' does not enclose namespace 'Canvas'
Canvas::~Canvas()
~~~~~~~~^
src/canvas.cpp:22:12: error: use of undeclared identifier '_data'
  delete[] _data;
           ^
src/canvas.cpp:25:14: error: cannot define or redeclare 'SaveToBitmap' here because namespace 'cg' does not enclose namespace 'Canvas'
void Canvas::SaveToBitmap(std::string fileName)
     ~~~~~~~~^
src/canvas.cpp:27:33: error: use of undeclared identifier 'fileName'
  std::string path = bmp_path + fileName;
                                ^
src/canvas.cpp:29:15: error: unknown type name '_size_x'
  BmpImg img (_size_x, _size_y);
              ^
src/canvas.cpp:29:24: error: unknown type name '_size_y'
  BmpImg img (_size_x, _size_y);
                       ^
src/canvas.cpp:30:16: error: use of undeclared identifier '_size_y'
  for (int y = _size_y - 1, x; y >= 0; y--)
               ^
src/canvas.cpp:32:14: error: use of undeclared identifier '_size_x'
    for (x = _size_x - 1; x >= 0; x--)
             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
src/main.cpp:8:17: error: expected namespace name
using namespace cg;
                ^
1 error generated.
DOWNLOADED 0 ARTIFACTS, 0.00 BYTES, 100.0% CACHE MISS
BUILDING: FINISHED IN 4.7s 10/8 JOBS, 4 UPDATED

Top slow rules
    //:cg: 4.0s
    //lib/libbmp:libbmp: 0.0s
    //lib/boost_1_78_0:boost: 0.0s
BUILD FAILED
Command failed with exit code 1.

command: [/usr/bin/clang++, @/Users/barjimal/Code/cpp/cg/buck-out/bin/cg#compile-main.cpp.o4b91d1f7,default/ppandcompile.argsfile]

stderr: src/main.cpp:8:17: error: expected namespace name
using namespace cg;
                ^
1 error generated.
    When running <c++ preprocess_and_compile>.
    When building rule //:cg#compile-main.cpp.o4b91d1f7,default.
